# orienteering-cpp

./: .gitignore  BENCHMARK_RESULTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  MIGRATION.md  README.md  TODO.md  benchmark_summary.py  check_distances  check_distances.cpp  test_pr01.cpp  test_pr01_simple.cpp  test_single_instance.sh  test_toptw_parse.cpp
data/mctopmtw/: format description MCTOPMTW.txt
data/mctopmtw/Cordeau/: MCTOPMTW-1-pr01.txt  MCTOPMTW-1-pr02.txt  MCTOPMTW-1-pr03.txt  MCTOPMTW-1-pr04.txt  MCTOPMTW-1-pr05.txt  MCTOPMTW-1-pr07.txt  MCTOPMTW-1-pr08.txt  MCTOPMTW-1-pr09.txt  MCTOPMTW-2-pr01.txt  MCTOPMTW-2-pr02.txt  MCTOPMTW-2-pr03.txt  MCTOPMTW-2-pr04.txt  MCTOPMTW-2-pr05.txt  MCTOPMTW-2-pr07.txt  MCTOPMTW-2-pr08.txt  MCTOPMTW-2-pr09.txt  MCTOPMTW-3-pr01.txt  MCTOPMTW-3-pr02.txt  MCTOPMTW-3-pr03.txt  MCTOPMTW-3-pr04.txt  MCTOPMTW-3-pr05.txt  MCTOPMTW-3-pr07.txt  MCTOPMTW-3-pr08.txt  MCTOPMTW-3-pr09.txt  MCTOPMTW-4-pr01.txt  MCTOPMTW-4-pr02.txt  MCTOPMTW-4-pr03.txt  MCTOPMTW-4-pr04.txt  MCTOPMTW-4-pr05.txt  MCTOPMTW-4-pr07.txt  MCTOPMTW-4-pr08.txt  MCTOPMTW-4-pr09.txt
data/mctopmtw/Solomon/: MCTOPMTW-1-c101.txt  MCTOPMTW-1-c102.txt  MCTOPMTW-1-c103.txt  MCTOPMTW-1-c104.txt  MCTOPMTW-1-c105.txt  MCTOPMTW-1-c106.txt  MCTOPMTW-1-c107.txt  MCTOPMTW-1-c108.txt  MCTOPMTW-1-c109.txt  MCTOPMTW-1-r101.txt  MCTOPMTW-1-r102.txt  MCTOPMTW-1-r103.txt  MCTOPMTW-1-r104.txt  MCTOPMTW-1-r105.txt  MCTOPMTW-1-r106.txt  MCTOPMTW-1-r107.txt  MCTOPMTW-1-r108.txt  MCTOPMTW-1-r109.txt  MCTOPMTW-1-r110.txt  MCTOPMTW-1-r111.txt  MCTOPMTW-1-r112.txt  MCTOPMTW-1-rc101.txt  MCTOPMTW-1-rc102.txt  MCTOPMTW-1-rc103.txt  MCTOPMTW-1-rc104.txt  MCTOPMTW-1-rc105.txt  MCTOPMTW-1-rc106.txt  MCTOPMTW-1-rc107.txt  MCTOPMTW-1-rc108.txt  MCTOPMTW-2-c101.txt  MCTOPMTW-2-c102.txt  MCTOPMTW-2-c103.txt  MCTOPMTW-2-c104.txt  MCTOPMTW-2-c105.txt  MCTOPMTW-2-c106.txt  MCTOPMTW-2-c107.txt  MCTOPMTW-2-c108.txt  MCTOPMTW-2-c109.txt  MCTOPMTW-2-r101.txt  MCTOPMTW-2-r102.txt  (+76 more)
data/results/: MCTOPMTW.xls  MCTOPTW.xls  SVRPTW.xls  TOPTW.xls
data/tdop/: TDOP_format.txt  speedmatrix.txt
data/tdop/dataset1/: arc_cat_1.txt
data/tdop/dataset1/OP_instances/: p1.1.a.txt  p1.1.b.txt  p1.1.c.txt  p1.1.d.txt  (+5 more)
data/tdop/dataset2/: arc_cat_2.txt
data/tdop/dataset3/: arc_cat_3.txt
data/tdop/dataset4/: arc_cat_4.txt
data/tdop/dataset5/: arc_cat_5.txt
data/tdop/dataset6/: arc_cat_6.txt
data/tdop/dataset7/: arc_cat_7.txt
data/tdoptw/: 100.1.1.TXT  100.1.2.TXT  100.1.3.TXT  100.2.1.TXT  100.2.2.TXT  100.2.3.TXT  100.3.1.TXT  100.3.2.TXT  100.3.3.TXT  100.4.1.TXT  100.4.2.TXT  100.4.3.TXT  20.1.1.TXT  20.1.2.TXT  20.1.3.TXT  20.2.1.TXT  20.2.2.TXT  20.2.3.TXT  20.3.1.TXT  20.3.2.TXT  20.3.3.TXT  20.4.1.TXT  20.4.2.TXT  20.4.3.TXT  250.1.1.TXT  250.1.2.TXT  250.1.3.TXT  250.2.1.TXT  250.2.2.TXT  250.2.3.TXT  250.3.1.TXT  250.3.2.TXT  250.3.3.TXT  250.4.1.TXT  250.4.2.TXT  250.4.3.TXT  50.1.1.TXT  50.1.2.TXT  50.1.3.TXT  50.2.1.TXT  (+12 more)
data/tdoptw/OPTW_optima/: 100.1.1.TXT  100.1.2.TXT  100.1.3.TXT  100.2.1.TXT  100.2.2.TXT  100.2.3.TXT  100.3.1.TXT  100.3.2.TXT  100.3.3.TXT  100.4.1.TXT  100.4.2.TXT  100.4.3.TXT  20.1.1.TXT  20.1.2.TXT  20.1.3.TXT  20.2.1.TXT  20.2.2.TXT  20.2.3.TXT  20.3.1.TXT  20.3.2.TXT  20.3.3.TXT  20.4.1.TXT  20.4.2.TXT  20.4.3.TXT  50.1.1.TXT  50.1.2.TXT  50.1.3.TXT  50.2.1.TXT  50.2.2.TXT  50.2.3.TXT  50.3.1.TXT  50.3.2.TXT  50.3.3.TXT  50.4.1.TXT  50.4.2.TXT  50.4.3.TXT  optw_opt_cpu.xlsx
data/toptw/: c204.txt
data/ttdp/: format_description_TTDP.txt
examples/: CMakeLists.txt  benchmark.cpp  benchmark_all.cpp  benchmark_exact.cpp  benchmark_grasp.cpp  benchmark_greedy.cpp  benchmark_lns.cpp  benchmark_lns_cordeau.cpp  benchmark_lns_sensitivity.cpp  benchmark_randomized_greedy.cpp  benchmark_toptw_vehicles.cpp  benchmark_utils.h  check_dummy.cpp  debug_greedy_toptw.cpp  solve_op.cpp  test_metaheuristics_5s.cpp  test_rand_greedy_5s.cpp  test_toptw_quick.cpp
experimental/external_kb/: CMakeLists.txt  README.md
include/core/: constants.h  random.h  routing_utils.h  types.h
include/io/: instance_parser.h  mctopmtw_parser.h  op_parser.h  singlesat_parser.h  tdop_parser.h  tdoptw_parser.h  top_parser.h  toptw_parser.h  ttdp_parser.h
include/knowledge_base/: sel_manager.h
include/model/: graph.h  node.h  node.hpp  orienteering_model.hpp  problem.h  solution.h
include/model/variants/: mctopmtw.h  op.h  optw.h  singlesat.h  tdop.h  tdoptw.h  top.h  toptw.h  ttdp.h
include/solver/: iterated_local_search.hpp  solver.h
include/solver/checker/: solution_checker.h
include/solver/constructive/: feasibility_checker.h  greedy.h  move_evaluator.h  randomized_greedy.h
include/solver/dynamic_programming/: dp_solvers.h  label.h
include/solver/local_search/: LNS.h  base_ls.h  grasp.h  moves.h
include/solver/metaheuristic/: grasp_vns.h  ils09.h  ils_route_recombination.h  lns.h  sails.h
include/solver/policy_learning/: mcts_node.h  mcts_solver.h
include/solver/pulse/: pulse_solver.h
include/utils/: argument_parser.hpp  rnd_generator.hpp
src/: CMakeLists.txt  iterated_local_search.cpp  lib.cpp  orienteering_model.cpp
src/io/: mctopmtw_parser.cpp  op_parser.cpp  singlesat_parser.cpp  tdop_parser.cpp  tdoptw_parser.cpp  top_parser.cpp  toptw_parser.cpp  ttdp_parser.cpp
src/knowledge_base/: sel_manager.cpp
src/model/: graph.cpp
src/solver/constructive/: feasibility_checker.cpp  greedy.cpp  move_evaluator.cpp  randomized_greedy.cpp
src/solver/dynamic_programming/: dp_solvers.cpp
src/solver/local_search/: LNS.cpp  base_ls.cpp  grasp.cpp
src/solver/metaheuristic/: grasp_vns.cpp  ils09.cpp  ils_route_recombination.cpp  lns.cpp  sails.cpp
src/solver/policy_learning/: mcts_solver.cpp
src/solver/pulse/: pulse_solver.cpp
tests/: CMakeLists.txt  main.cpp  test_all_variants.cpp  test_base_ls.cpp  test_ds.cpp  test_exact_optimality.cpp  test_greedy_solver.cpp  test_io_parsers.cpp  test_knowledge_base.cpp  test_metaheuristic_solvers.cpp  test_model_extensions.cpp  test_orienteering_model.cpp  test_route_recombination.cpp  test_solution_checker.cpp  test_solvers.cpp  testlib.cpp
(+50 files in other folders)
